--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-<html class="gt-ie8 gt-ie9">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Prebid config creator</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Prebid helper</title>
     <link rel="stylesheet" href="styles/app.css">
     <script src="scripts/app.js"></script>
 </head>
